src/test/resources/purescript_examples/failing/DctorOperatorAliasExport.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith TransitiveDctorExportError\n')
  PSASTWrapperElement(Program)
    PSASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSASTWrapperElement(Qualified)
        PSASTWrapperElement(ModuleName)
          PSASTWrapperElement(TypeConstructor)
            PsiElement(proper name)('Data')
          PsiElement(.)('.')
        PSASTWrapperElement(ModuleName)
          PsiElement(proper name)('List')
      PsiElement(whitespace)(' ')
      PsiElement(()('(')
      PSASTWrapperElement(PositionedDeclarationRef)
        PsiElement(proper name)('List')
      PsiElement(,)(',')
      PsiElement(whitespace)(' ')
      PSASTWrapperElement(PositionedDeclarationRef)
        PSASTWrapperElement(ValueRef)
          PsiElement(()('(')
          PSASTWrapperElement(identifier)
            PsiElement(operator)(':')
          PsiElement())(')')
      PsiElement())(')')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n  ')
      PSASTWrapperElement(DataDeclaration)
        PsiElement(data)('data')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('List')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(TypeArgs)
          PSASTWrapperElement(GenericIdentifier)
            PsiElement(identifier)('a')
            PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('Cons')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(TypeAtom)
          PSASTWrapperElement(GenericIdentifier)
            PsiElement(identifier)('a')
            PsiElement(whitespace)(' ')
        PSASTWrapperElement(TypeAtom)
          PsiElement(()('(')
          PSASTWrapperElement(Type)
            PSASTWrapperElement(TypeAtom)
              PSASTWrapperElement(Qualified)
                PsiElement(proper name)('List')
                PsiElement(whitespace)(' ')
            PSASTWrapperElement(TypeAtom)
              PSASTWrapperElement(GenericIdentifier)
                PsiElement(identifier)('a')
          PsiElement())(')')
          PsiElement(whitespace)(' ')
        PsiElement(|)('|')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('Nil')
        PsiElement(whitespace)('\n\n  ')
      PSASTWrapperElement(NamedBinder)
        <empty list>
      PSASTWrapperElement(FixityDeclaration)
        PSASTWrapperElement(Fixity)
          PsiElement(infixr)('infixr')
          PsiElement(whitespace)(' ')
          PsiElement(natural)('6')
          PsiElement(whitespace)(' ')
        PSASTWrapperElement(ModuleName)
          PSASTWrapperElement(Qualified)
            PsiElement(proper name)('Cons')
            PsiElement(whitespace)(' ')
        PsiElement(as)('as')
        PsiElement(whitespace)(' ')
        PsiElement(operator)(':')
        PsiElement(whitespace)('\n')
